--- a/WebApp/content/css/styles.css
+++ b/WebApp/content/css/styles.css
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 body{
   font-family: Helvetica;
   margin: 0;
@@ -17,13 +19,15 @@ h1,h2,h3{
 }
 
 #menu-bar{
-  background: crimson;
-  color: #fff;
-  padding: 10px;
+  background: #4D4D4D;
+  color: #797979;
+  text-transform: uppercase;
+  padding: 25px;
 }
 
 #menu-bar h1{
-  font-size: 24px;
+  font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 18px;
   font-weight: normal;
   display: inline-block;
 }
@@ -53,6 +57,7 @@ main{
 
 .content{
   padding: 20px;
+  overflow: hidden;
 }
 
 .content button,
@@ -107,6 +112,8 @@ main{
   margin: 15px auto;
 }
 
+
+
 .remove{
   float: right;
   padding: 5px;
@@ -117,4 +124,51 @@ main{
   color: crimson;
   cursor: pointer;
   margin-left: 10px;
+}
+
+
+/*  Animations    */
+
+
+/* The starting CSS styles for the enter animation */
+main.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+main.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
+#rol-list li.ng-enter {
+  transition:0.2s linear all;
+  opacity:0;
+  transform: translateY(30px);
+}
+
+#rol-list li.ng-enter.ng-enter-active {
+  opacity:1;
+  transform: translateY(0);
+}
+
+#rol-list li.ng-leave {
+  transition:0.5s linear all;
+  opacity:1;
+  transform: translateX(0);
+}
+
+#rol-list li.ng-leave.ng-leave-active {
+  opacity:0;
+  transform: translateX(-100%);
+}
+
+
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched{
+  border: 2px solid red;
+}
+
+input[disabled="disabled"]{
+  opacity: 0.4;
+  cursor: not-allowed !important;
 }
