--- a/WebApp/views/gestionRoles.html
+++ b/WebApp/views/gestionRoles.html
@@ -3,7 +3,7 @@
   <button ng-click="orden= 'descripcion'">Ordenar por descripción</button>
   <!--<p>{{message}} </p>-->
   <input type="text" ng-model="busqueda" placeholder="Buscar..."/>
-  <ul>
+  <ul id="rol-list">
     <li ng-repeat="rol in roles | orderBy: orden | filter: busqueda"
     ng-show="rol.available">
       <img ng-src="{{rol.thumb}}" style= "margin: -12px 10px 0 0; float: left; width: 50px;"
@@ -18,4 +18,6 @@
     <input type="text" placeholder="Descripción" ng-model="nrol.descripcion">
     <input type="submit" value= "Agregar rol" />
   </form>
+
+  <a href="" ng-click="removeAll()">Eliminar todo</a>
 </div>
