--- a/WebApp/content/css/styles-nav.css
+++ b/WebApp/content/css/styles-nav.css
@@ -1,5 +1,5 @@
 #nav-bar ul {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Open Sans Condensed', arial, sans;
   list-style-type: none;
   margin: 0;
   padding: 0;
