--- a/WebApp/content/css/styles-form.css
+++ b/WebApp/content/css/styles-form.css
@@ -55,6 +55,7 @@
 	box-shadow: inset 0px 1px 0px 0px #45D6D6;
 	background-color: #2CBBBB;
 	border: 1px solid #27A0A0;
+	border-radius: 10px;
 	display: inline-block;
 	cursor: pointer;
 	color: #FFFFFF;
@@ -63,7 +64,10 @@
 	padding: 8px 18px;
 	text-decoration: none;
 	text-transform: uppercase;
+
 }
+
+
 .form-style input[type="button"]:hover,
 .form-style input[type="submit"]:hover {
 	background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
