--- a/WebApp/content/css/styles.css
+++ b/WebApp/content/css/styles.css
@@ -1,51 +1,24 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 body{
-  font-family: Helvetica;
+  font-family: 'Open Sans Condensed', arial, sans;
   margin: 0;
 }
 
 h1,h2,h3{
   margin: 0;
+  font-family: 'Open Sans Condensed', arial, sans;
 }
 
 .belt{
   padding: 5px 10px;
   border-radius: 10px;
   margin-left: 5px;
-  color: #fff;
+  color: #FFFFF;
   font-size: 15px;
   text-transform: uppercase;
-}
-
-#menu-bar{
-  background: #4D4D4D;
-  color: #797979;
-  text-transform: uppercase;
-  padding: 25px;
-}
-
-#menu-bar h1{
-  font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 18px;
-  font-weight: normal;
-  display: inline-block;
-}
-
-#menu-bar ul{
-  float: right;
-  list-style-type: none;
-  padding: 0;
-  margin: 6px 0;
-}
-
-#menu-bar li{
-  float: right;
-  margin-left: 20px;
-}
-
-#menu-bar a{
-  color: #fff
+  margin:auto;
+  /*tyle= "margin: -12px 10px 0 0; float: left; width: 50px;"*/
 }
 
 main{
@@ -62,11 +35,11 @@ main{
 
 .content button,
 .content input[type="submit"]{
-  background: #fff;
+  background-color: #2CBBBB;
+	color: #FFFFFF;
   padding: 10px;
   border-radius: 10px;
   cursor: pointer;
-  color: #777;
   border: 0;
   box-shadow: 2px 2px 2px rgba(20,20,20,0.1);
   font-size: 16px;
@@ -79,7 +52,7 @@ main{
 .content ul{
   padding: 0;
   list-style-type: none;
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .content li{
@@ -89,7 +62,10 @@ main{
 }
 
 .content li span{
-  float: right;
+  /*float: center;
+   padding: 15px;*/
+   float: right;
+  font-family: 'Open Sans Condensed', arial, sans;
 }
 
 .content li h3{
@@ -126,6 +102,54 @@ main{
   margin-left: 10px;
 }
 
+table {
+  font-family: 'Open Sans Condensed', arial, sans;
+  width:100%;
+  border-collapse: collapse;
+  width: 100%;
+}
+table, th, td {
+  font-family: 'Open Sans Condensed', arial, sans;
+  /*border: 1px solid #dddddd;*/
+  text-align: left;
+  padding: 8px;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+table#table-style h3{
+/*
+	font-family: 'Open Sans Condensed', sans-serif;*/
+
+  text-align: left;
+  font-weight: normal;
+  color: #777;
+  font-size: 18px;
+  padding-left: 30px;
+  padding-top: 50px;
+	margin: -30px -30px 30px -30px;
+}
+/*
+table#table-style h3{
+  display: inline-block;
+  font-weight: normal;
+  font-size: 22px;
+}*/
+table#table-style tr:nth-child(even) {
+  background-color: #eee;
+}
+table#table-style tr:nth-child(odd) {
+ background-color: #fff;
+}
+table#table-style th {
+  background-color: #4CAF50;
+  font-family: 'Open Sans Condensed', sans-serif;
+	color: #fff;
+	font-size: 18px;
+	font-weight: 100;
+	padding: 20px;
+}
 
 /*  Animations    */
 
@@ -162,10 +186,13 @@ main.ng-enter.ng-enter-active {
   opacity:0;
   transform: translateX(-100%);
 }
-
+.content input[type="submit"]:hover {
+	background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+	background-color:#34CACA;
+}
 
 input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched{
-  border: 2px solid red;
+  border: 2px solid #b71c1c;
 }
 
 input[disabled="disabled"]{
