--- a/WebApp-Admin/views/roles.html
+++ b/WebApp-Admin/views/roles.html
@@ -1,7 +1,15 @@
 <div class="content">
-  <!--<p>{{message}} </p>-->
-  <input type="text" ng-model="busqueda" placeholder="Buscar..."/>
-  <br></br>
+  <h1 style="color:#263238">Gestión de Roles</h1>
+
+
+</div>
+
+<div class="content">
+  <div>
+    <h3 style="color:#37474f; padding=10px">Búsqueda: <input type="text" ng-model="busqueda" placeholder="Buscar..."/></h3>
+    <br>
+  </div>
+  <br>
   <table id="table-style">
   <tr>
     <th>Puesto</th>
@@ -14,10 +22,15 @@
       <td><div class="remove" ng-click="eliminarRol(rol)">x</div></td>
     </tr>
   </table>
+  <br><br><br>
+    <div>
+      <h2 style="color:#eceff1; text-align:center; background-color:#1565c0; padding:20px"">Agregar roles</h2>
+      <br><br>
+      <form name="rolForm" ng-submit="addRol()" novalidate>
+        <input  type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true"  >
+        <input  type="text" placeholder="Descripción" ng-model="nrol.descripcion" ng-required="true" >
+        <input type="submit" value= "Nuevo rol" ng-disabled="rolForm.$invalid"/>
+      </form>
+    </div>
 
-  <form name="rolForm" ng-submit="addRol()" novalidate>
-    <input type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true">
-    <input type="text" placeholder="Descripción" ng-model="nrol.descripcion" ng-required="true">
-    <input type="submit" value= "Nuevo rol" ng-disabled="rolForm.$invalid"/>
-  </form>
 </div>
