--- a/WebApp-Admin/views/home.html
+++ b/WebApp-Admin/views/home.html
@@ -1,4 +1,19 @@
-<div class="content">
+<div class="container">
+  <br>
+  <div class="col-md-12">
+    <div id="carousel-1" class="carousel slide" data-ride="carousel">
+      <!-- Indicadores-->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-1" data-slide-to="0"></li>
+        <li data-target="#carousel-1" data-slide-to="1"></li>
+        <li data-target="#carousel-1" data-slide-to="2"></li>
+      </ol>
+      <!-- Contenedor slide-->
+      <!--https://www.youtube.com/watch?v=LsN2jkLruKA&list=PLhSj3UTs2_yWTKvu1Aq3xUhzIJNBZ3MFW&index=34-->
+
+    </div>
+
+  </div>
   <h1 style="text-align: center" color="crimson">Administrador</h1>
   <br><h2 style="text-align: center">L3M Super</h2></br>
   <h3 style="text-align: center">Bienvenidos</h3>
