--- a/WebApp-Admin/views/roles.html
+++ b/WebApp-Admin/views/roles.html
@@ -1,17 +1,23 @@
-<div class="content">
+<div class="container">
   <h1 style="color:#263238">Gestión de Roles</h1>
-
-
 </div>
 
-<div class="content">
-    <h3 style="color:#37474f; padding=10px">Búsqueda: <input type="text" ng-model="busqueda" placeholder="Buscar..."/></h3>
-    <br>
+<div class="container">
   <br>
+  <form class="form-horizontal" action="">
+    <div class="form-group">
+      <label for="busqueda" class="control-label col-md-2">Búsqueda:</label>
+      <div class="col-md-4">
+        <input class="form-control" type="text" ng-model="busqueda" placeholder="Buscar..."/>
+      </div>
+    </div>
+  </form>
 </div>
+<br><br>
+
   <div class="table-responsive">
     <table class="table"> <!--id="table-style" --->
-      <tr style="background:#4CAF50;; color:#FFFFFF">
+      <tr>
         <th><h3>Puesto</h3></th>
         <th><h3>Descripción</h3></th>
         <th></th>
@@ -25,13 +31,25 @@
   </div>
   <br><br><br>
 <div class="container">
-  <h3 style=>Agregar roles <span class="label label-primary">Nuevo</span></h3>
+  <h3 style="">     Agregar roles <span class="label label-warning">Nuevo</span></h3>
   <br><br>
-</div>
-<div class="content">
-  <form name="rolForm" ng-submit="addRol()" novalidate>
-    <input  type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true"  >
-    <input  type="text" placeholder="Descripción" ng-model="nrol.descripcion" ng-required="true" >
-    <input type="submit" value= "Nuevo rol" ng-disabled="rolForm.$invalid"/>
+  <form name="rolForm" ng-submit="addRol()" novalidate class="form-horizontal">
+    <div class="form-group">
+      <label for="nombre" class="control-label col-md-2">Nombre:</label>
+      <div class="col-md-4">
+        <input  class="form-control" type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true"  >
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="descripcion" class="control-label col-md-2">Descripción:</label>
+      <div class="col-md-4">
+        <input  class="form-control" type="text" placeholder="Descripción" ng-model="nrol.descripcion" ng-required="true" >
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-4 col-md-offset-3">
+        <input class="btn btn-primary" type="submit" value= "Nuevo rol" ng-disabled="rolForm.$invalid"/>
+      </div>
+    </div>
 </form>
 </div>
