--- a/WebApp-Venta/content/css/styles.css
+++ b/WebApp-Venta/content/css/styles.css
@@ -4,29 +4,16 @@ body{
   font-family: 'Open Sans Condensed', arial, sans;
   margin: 0;
 }
-
+/*
 h1,h2,h3{
   margin: 0;
   font-family: 'Open Sans Condensed', arial, sans;
-}
+  font-weight: normal;
+}*/
 
-p{
-  font-family: 'Open Sans Condensed', arial, sans;
-}
-
-.belt{
-  padding: 5px 10px;
-  border-radius: 10px;
-  margin-left: 5px;
-  color: #FFFFF;
-  font-size: 15px;
-  text-transform: uppercase;
-  margin:auto;
-  /*tyle= "margin: -12px 10px 0 0; float: left; width: 50px;"*/
-}
 
 main{
-  background: #eee;
+
   width: 80%;
   margin: 30px auto;
   border-radius: 10px;
@@ -79,11 +66,12 @@ main{
 }
 
 .content input{
-  width: 90%;
+  width: 70%;
   padding: 10px 5%;
   border-radius: 10px;
   border: 2px solid #ddd;
   margin: 10px 0;
+  margin-left: 35px;
 }
 
 .content input[type="submit"]:last-child{
@@ -169,24 +157,24 @@ main.ng-enter.ng-enter-active {
   opacity:1;
 }
 
-#table-style td.ng-enter {
+#table-style li.ng-enter {
   transition:0.2s linear all;
   opacity:0;
   transform: translateY(30px);
 }
 
-#table-style td.ng-enter.ng-enter-active {
+#table-style li.ng-enter.ng-enter-active {
   opacity:1;
   transform: translateY(0);
 }
 
-#table-style td.ng-leave {
+#table-style li.ng-leave {
   transition:0.5s linear all;
   opacity:1;
   transform: translateX(0);
 }
 
-#table-style td.ng-leave.ng-leave-active {
+#table-style li.ng-leave.ng-leave-active {
   opacity:0;
   transform: translateX(-100%);
 }
