--- a/WebApp-Admin/views/horario.html
+++ b/WebApp-Admin/views/horario.html
@@ -58,7 +58,7 @@
     <div class="form-group">
       <label for="horas" class="control-label col-md-2">Horas:</label>
       <div class="col-md-4">
-        <input  class="form-control" type="number"
+        <input  class="form-control" type="number" min="42"
         placeholder="Horas" ng-model="nhor.horas"  ng-required="true">
       </div>
     </div>
