--- a/WebApp - angular/app/app/src/app/administration/roles/roles.component.html
+++ b/WebApp - angular/app/app/src/app/administration/roles/roles.component.html
@@ -21,7 +21,6 @@
     <tr>
       <th>Puesto</th>
       <th>Descripción</th>
-      <th></th>
     </tr>
     <tr *ngFor="let Role of service.roleList" class="active">
       <td (click)="populateForm(Role)"> {{Role.Name}}</td>
@@ -36,23 +35,23 @@
 <div class="container">
   <h3> Agregar roles <span class="label label-warning">Nuevo</span></h3>
   <br><br>
-  <form name="rolForm" ng-submit="addRol()" novalidate class="form-horizontal">
+
+  <form #form = "ngForm" (submit)="onSubmit(form)" novalidate class="form-horizontal" autocomplete="off">
     <div class="form-group">
       <label for="nombre" class="control-label col-md-2">Nombre:</label>
       <div class="col-md-4">
-        <input class="form-control" type="text" placeholder="Nombre" ng-model="nrol.nombre" ng-required="true">
+          <input name="Name" #Name="ngModel" [(ngModel)]="service.formData.Name" class="form-control" required>
       </div>
     </div>
     <div class="form-group">
       <label for="descripcion" class="control-label col-md-2">Descripción:</label>
       <div class="col-md-4">
-        <input class="form-control" type="text" placeholder="Descripción" ng-model="nrol.descripcion"
-          ng-required="true">
+        <input class="form-control"  name="Description" [(ngModel)]="service.formData.Description" #Description="ngModel" required>
       </div>
     </div>
     <div class="form-group">
       <div class="col-md-4 col-md-offset-3">
-        <input class="btn btn-primary" type="submit" value="Agregar" ng-disabled="rolForm.$invalid" />
+        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">SUBMIT</button>
       </div>
     </div>
   </form>
