--- a/WebApp - angular/app/app/src/app/navigation/navigation.component.html
+++ b/WebApp - angular/app/app/src/app/navigation/navigation.component.html
@@ -2,13 +2,13 @@
     <ul>
      <li><a routerLink="/home">Inicio</a></li>
      <li><a routerLink="/Role">Roles</a></li>
-     <li><a routerLink="/sucursales">Sucursales</a></li>
-     <li><a routerLink="/contact">Trabajadores</a></li>
-     <li><a routerLink="/providers">Proveedores</a></li>
-     <li><a routerLink="/contact">Productos</a></li>
-     <li><a routerLink="/contact">Compras</a></li>
-     <li><a routerLink="/horario">Horario</a></li>
-     <li><a routerLink="/contact">Planilla</a></li>
+     <li><a routerLink="/Sucursales">Sucursales</a></li>
+     <li><a routerLink="/Trabajadores">Trabajadores</a></li>
+     <li><a routerLink="/Proveedores">Proveedores</a></li>
+     <li><a routerLink="/Productos">Productos</a></li>
+     <li><a routerLink="/Compras">Compras</a></li>
+     <li><a routerLink="/Horario">Horario</a></li>
+     <li><a routerLink="/Planilla">Planilla</a></li>
   
      <li style="float:right"><a class="active" routerLink="/login">Login</a></li>
     </ul>
