--- a/WebApp - angular/app/app/src/styles.css
+++ b/WebApp - angular/app/app/src/styles.css
@@ -1,1 +1,286 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+.form-style{
+	font-family: 'Open Sans Condensed', arial, sans;
+	width: 800px;
+	padding: 30px;
+	background: #FFFFFF;
+	margin: 50px auto;
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
+
+}
+.form-style h2{
+	background: #4D4D4D;
+	font-family: 'Open Sans Condensed', sans-serif;
+	color: #797979;
+	font-size: 18px;
+	font-weight: 100;
+	padding: 20px;
+	margin: -30px -30px 30px -30px;
+}
+.form-style input[type="text"],
+.form-style input[type="date"],
+.form-style input[type="datetime"],
+.form-style input[type="email"],
+.form-style input[type="number"],
+.form-style input[type="search"],
+.form-style input[type="time"],
+.form-style input[type="url"],
+.form-style input[type="password"],
+.form-style textarea,
+.form-style select
+{
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	outline: none;
+	display: block;
+	width: 100%;
+	padding: 7px;
+	border: none;
+	border-bottom: 1px solid #ddd;
+	background: transparent;
+	margin-bottom: 10px;
+	font: 16px Arial, Helvetica, sans-serif;
+	height: 45px;
+}
+.form-style textarea{
+	resize:none;
+	overflow: hidden;
+}
+
+.form-style input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched{
+  border: 2px solid #b71c1c;
+}
+
+.form-style input[disabled="disabled"]{
+  opacity: 0.4;
+  cursor: not-allowed !important;
+}
+
+
+body{
+  font-family: 'Open Sans Condensed', arial, sans;
+  margin: 0;
+}
+
+main{
+
+  width: 80%;
+  margin: 30px auto;
+  border-radius: 10px;
+}
+
+.content{
+  padding: 20px;
+  overflow: hidden;
+}
+
+.content button,
+.content input[type="submit"]{
+  background-color: #2CBBBB;
+	color: #FFFFFF;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 0;
+  box-shadow: 2px 2px 2px rgba(20,20,20,0.1);
+  font-size: 16px;
+}
+
+.content button:nth-child(2){
+  float: right;
+}
+
+.content ul{
+  padding: 0;
+  list-style-type: none;
+  margin: 20px 0;
+}
+
+.content li{
+  padding: 15px 0;
+  border-top: 1px solid #e2e2e2;
+  color: #444;
+}
+
+.content li span{
+  /*float: center;
+   padding: 15px;*/
+   float: right;
+  font-family: 'Open Sans Condensed', arial, sans;
+}
+
+.content li h3{
+  display: inline-block;
+  font-weight: normal;
+  font-size: 22px;
+}
+
+.content input{
+  width: 70%;
+  padding: 10px 5%;
+  border-radius: 10px;
+  border: 2px solid #ddd;
+  margin: 10px 0;
+  margin-left: 35px;
+}
+
+.content input[type="submit"]:last-child{
+  width: 150px;
+  display: block;
+  margin: 15px auto;
+}
+
+
+
+.remove{
+  float: right;
+  padding: 5px;
+  background: #fff;
+  width: 18px;
+  text-align: center;
+  border-radius: 20px;
+  color: crimson;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+table {
+  font-family: 'Open Sans Condensed', arial, sans;
+  width:100%;
+  border-collapse: collapse;
+  width: 100%;
+}
+table, th, td {
+  font-family: 'Open Sans Condensed', arial, sans;
+  /*border: 1px solid #dddddd;*/
+  text-align: left;
+  padding: 8px;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+table#table-style h3{
+/*
+	font-family: 'Open Sans Condensed', sans-serif;*/
+
+  text-align: left;
+  font-weight: normal;
+  color: #777;
+  font-size: 18px;
+  padding-left: 30px;
+  padding-top: 50px;
+	margin: -30px -30px 30px -30px;
+}
+/*
+table#table-style h3{
+  display: inline-block;
+  font-weight: normal;
+  font-size: 22px;
+}*/
+table#table-style tr:nth-child(even) {
+  background-color: #eee;
+}
+table#table-style tr:nth-child(odd) {
+ background-color: #fff;
+}
+table#table-style th {
+  background-color: #4CAF50;
+  font-family: 'Open Sans Condensed', sans-serif;
+	color: #fff;
+	font-size: 18px;
+	font-weight: 100;
+	padding: 20px;
+}
+
+/*  Animations    */
+
+
+/* The starting CSS styles for the enter animation */
+main.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+main.ng-enter.ng-enter-active {
+  opacity:1;
+}
+
+#table-style li.ng-enter {
+  transition:0.2s linear all;
+  opacity:0;
+  transform: translateY(30px);
+}
+
+#table-style li.ng-enter.ng-enter-active {
+  opacity:1;
+  transform: translateY(0);
+}
+
+#table-style li.ng-leave {
+  transition:0.5s linear all;
+  opacity:1;
+  transform: translateX(0);
+}
+
+#table-style li.ng-leave.ng-leave-active {
+  opacity:0;
+  transform: translateX(-100%);
+}
+.content input[type="submit"]:hover {
+	background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
+	background-color:#34CACA;
+}
+
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched{
+  border: 2px solid #b71c1c;
+}
+
+input[disabled="disabled"]{
+  opacity: 0.4;
+  cursor: not-allowed !important;
+}
+
+body{
+    padding-top:80px;
+  }
+  
+  #nav-bar ul {
+    font-family: 'Open Sans Condensed', arial, sans;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  
+  #nav-bar li {
+    float: left;
+  }
+  
+  #nav-bar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* Change the link color to #111 (black) on hover */
+  #nav-bar li a:hover {
+    background-color: #1565c0;
+  }
+  
+  #nav-bar .active {
+    background-color: #4CAF50;
+  }
+  
