--- a/WebApp - angular/app/app/src/app/administration/sucursales/sucursales.component.html
+++ b/WebApp - angular/app/app/src/app/administration/sucursales/sucursales.component.html
@@ -24,7 +24,7 @@
     </div>
     <br><br><br>
   <div class="container">
-    <h3></h3>Agregar Sucursal <span class="label label-warning">Nueva</span></h3>
+    <h3>Agregar Sucursal <span class="label label-warning">Nueva</span></h3>
     <br><br>
     <form name="sucursalForm" ng-submit="addSuc()" novalidate class="form-horizontal">
       <div class="form-group">
